tests/cudn_test_6/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-all-pods
  namespace: red
spec:
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 8080
  podSelector: {}
  policyTypes:
  - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-to-all-pods
  namespace: blue
spec:
  egress:
  - to:
    - namespaceSelector: {}
    ports:
    - protocol: TCP
      port: 9090
  ingress:
  - from:
    - namespaceSelector: {}
    ports:
    - port: 8000
  podSelector: {}
  policyTypes:
  - Egress
  - Ingress
